# delfos_etl

./: .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
alvo/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
alvo/alembic/: env.py
alvo/alembic/versions/: 1d6e502b46c7_initial_target_schema.py
alvo/app/: main.py
alvo/app/config/: config.py
alvo/app/etl/: extract.py  load.py  run.py  transform.py
alvo/app/infra/database/: database.py
alvo/app/infra/models/: __init__.py  signal.py  target.py
alvo/tests/: conftest.py
alvo/tests/etl/: test_extract.py  test_load.py  test_run.py  test_transform.py
fonte/: Dockerfile  entrypoint.sh  pyproject.toml
fonte/alembic/: env.py
fonte/alembic/versions/: ad887fb0f004_initial_migration.py
fonte/app/: main.py
fonte/app/api/v1/: sensor.py
fonte/app/api/v1/endpoints/: seeds.py  sensor.py
fonte/app/config/: config.py
fonte/app/core/: database.py
fonte/app/infra/database/: database.py
fonte/app/infra/models/: sensor.py
fonte/app/infra/repositories/: sensor_repository.py
fonte/app/repositories/: sensor_repository.py
fonte/app/schemas/: seed.py  sensor.py
fonte/app/services/: seeder.py  sensor_data_generator.py
fonte/scripts/: populate_db.py
fonte/tests/: conftest.py  test_main.py  test_seeder.py  test_seeds_endpoint.py  test_sensor_repository.py
fonte/tests/api/: test_sensor_endpoint.py
fonte/tests/infra/: test_sensor_repository.py
fonte/tests/services/: test_sensor_data_generator.py
